# minicraft-launcher-tauri

./: .editorconfig  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.scss  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  profiles.rs  themes.rs  versions.rs
src/assets/: thirdparty_licenses.json
src/assets/langs/: en-US.json  pt-PT.json
src/components/BorderedButton/: index.scss  index.tsx
src/components/LicenseDialog/: index.scss  index.tsx
src/components/LoadingSpinner/: index.scss  index.tsx
src/components/MainMenu/: index.scss  index.tsx
src/components/MainMenu/components/MainMenuTab/: index.scss  index.tsx
src/components/SubMenu/: index.scss  index.tsx
src/components/WhatsNewDialog/: index.scss  index.tsx
src/context/: SettingsContext.tsx  TranslationContext.tsx
src/routes/Community/: index.scss  index.tsx
src/routes/Minicraft/: index.tsx
src/routes/Minicraft/pages/Installations/: index.tsx
src/routes/Minicraft/pages/PatchNotes/: index.tsx
src/routes/Minicraft/pages/Play/: index.tsx
src/routes/MinicraftPlus/: index.tsx
src/routes/MinicraftPlus/pages/FAQ/: index.scss  index.tsx
src/routes/MinicraftPlus/pages/Installations/: index.scss  index.tsx
src/routes/MinicraftPlus/pages/PatchNotes/: index.scss  index.tsx
src/routes/MinicraftPlus/pages/PatchNotes/components/PatchNoteDialog/: index.scss  index.tsx
src/routes/Settings/: index.tsx
src/routes/Settings/pages/About/: index.scss  index.tsx
src/routes/Settings/pages/General/: index.scss  index.tsx
src/routes/Settings/pages/Versions/: index.scss  index.tsx
