[package]
name = "minicraft-launcher"
version = "0.0.1"
description = "A launcher for Minicraft"
authors = ["KalmeMarq"]
license = "GLP-3.0"
repository = "https://github.com/MinicraftLauncher/minicraft-launcher"
default-run = "minicraft-launcher"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
serde_json = "1.0"
dirs = "4.0"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
