[package]
name = "minicraft-launcher"
version = "0.6.0"
description = "A launcher for Minicraft"
authors = ["KalmeMarq"]
license = "GLP-3.0"
repository = "https://github.com/MinicraftLauncher/minicraft-launcher"
default-run = "minicraft-launcher"
edition = "2021"
rust-version = "1.61"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0"
dirs = "4.0"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.12", features = ["shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
